--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">Apphub</string>
+    <string name="account_creation">Account creation</string>
     <string name="server_address_hint">Server address</string>
     <string name="offline_mode">Offline mode</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm password</string>
     <string name="login">Login</string>
     <string name="register">Create account</string>
+    <string name="username">Username</string>
 </resources>
