--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="login">Login</string>
     <string name="register">Create account</string>
     <string name="username">Username</string>
+    <string name="remember_my_email">Remember my email</string>
+
+    <string name="server_address_key">server_address</string>
+    <string name="offline_mode_key">offline_mode_key</string>
+    <string name="login_email_key">login_email_key</string>
+    <string name="remember_my_email_key">remember_my_email_key</string>
 </resources>
